# krishimithra

backend/: main.py  pyproject.toml
backend/app/: .env.example  config.py  database.py  main.py  models.py  requirements.txt
backend/app/routers/: chat.py  disease.py  grievance.py  ivr.py  live_voice.py  scheme.py  voice.py  weather.py  whatsapp.py
backend/app/services/: location_extractor.py  weather_service.py
backend/app/services/ai/: sarvam_ai_service.py  sarvam_service.py
backend/app/services/ivr/providers/: twilio_provider.py
backend/app/services/voice/: live_pipecat.py
frontend/: DESIGN_SYSTEM.md  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  Ui.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: AdminPage.jsx  ChatPage.jsx  DiseasePage.jsx  GrievancePage.jsx  HomePage.jsx  IvrSimulatorPage.jsx  LiveModePage.jsx  LiveVoicePage.jsx  LoginPage.jsx  OfficerPage.jsx  ProfilePage.jsx  RegisterPage.jsx  SchemePage.jsx  WeatherPage.jsx
